# failover-cluster

./: .gitattributes  .gitignore  Cargo.toml  README.md
.forge/: iter-notes.md
.forge/notes/: iter-1.md  iter-10.md  iter-2.md  iter-3.md  iter-4.md  iter-5.md  iter-6.md  iter-7.md  iter-8.md  iter-9.md
.github/workflows/: ci.yml
docs/: chaos-testing.md
docs/specs/raft-node-state-machine/: plan.md  wit-tree.yaml
docs/specs/write-ahead-log/: plan.md
docs/stories/failover-cluster-XRAFT/: architecture.md  architecture.md.iter-snapshot.bak  e2e-scenarios.md  e2e-scenarios.md.iter-snapshot.bak  implementation-plan.md  implementation-plan.md.iter-snapshot.bak  tech-spec.md  tech-spec.md.iter-snapshot.bak  workstreams.yaml
proto/: raft.proto
src/: config.rs  error.rs  lib.rs  types.rs
src/node/: command.rs  event.rs  mod.rs  role.rs  state.rs  state_machine.rs
tests/: state_machine_tests.rs
xraft-client/: Cargo.toml
xraft-client/src/: admin.rs  lib.rs  peer.rs  pool.rs
xraft-client/tests/: peer_client_integration.rs  peer_reconnect.rs
xraft-core/: Cargo.toml  build.rs
xraft-core/src/: app_record.rs  config.rs  error.rs  lib.rs  log_entry.rs  message.rs  node.rs  node_state.rs  rpc.rs  state_machine.rs  storage.rs  transport.rs  types.rs
xraft-core/tests/: raft_node_state_machine.rs
xraft-server/: Cargo.toml
xraft-server/src/: admin.rs  driver.rs  lib.rs  main.rs  metrics.rs  server.rs  status.rs  teardown.rs  test_support.rs
xraft-server/tests/: binary_cli.rs  server_lifecycle.rs  stage_6_2_router_pool_integration.rs  stage_7_2_static_voter_set.rs
xraft-storage/: Cargo.toml
xraft-storage/src/: hard_state.rs  lib.rs  log.rs  log_format.rs  log_segment.rs  snapshot.rs  snapshot_store.rs  state.rs
xraft-storage/tests/: hard_state_recovery.rs  log_corruption.rs  persistent_raft_state_acceptance.rs  stage_2_2_acceptance.rs
xraft-test/: Cargo.toml
xraft-test/src/: chaos.rs  clock.rs  fault_injection.rs  lib.rs  linearisability.rs  network.rs  observer.rs  persistent_storage.rs  real.rs  simulated.rs  state_machine.rs  teardown.rs
xraft-test/tests/: chaos_tests.rs  real_network_five_node_leader_failover.rs  real_network_three_node_replication.rs  simulated_chaos_linearisability.rs  simulated_chaos_no_data_loss.rs  simulated_deterministic_replay.rs  simulated_leader_kill_reelection.rs  simulated_partition_recovery.rs  simulated_propose_thousand_entries.rs  simulated_rapid_leader_churn.rs  simulated_simultaneous_election.rs  simulated_stress_thousand_per_second.rs  simulated_three_node_election.rs  stress_tests.rs
xraft-test/tests/chaos/: clock_skew.rs  mod.rs  network_partition.rs  node_crash.rs  node_failure.rs
xraft-test/tests/common/: cluster_harness.rs  mod.rs
xraft-test/tests/stress/: leader_churn.rs  mod.rs  throughput.rs
xraft-transport/: Cargo.toml  build.rs
xraft-transport/src/: grpc.rs  grpc_client.rs  grpc_server.rs  lib.rs
xraft-transport/tests/: grpc_integration.rs
