[package]
name = "failover-cluster-raft"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Raft consensus engine for failover-cluster, modelled on Apache Kafka's KRaft protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/smartpcr/failover-cluster"
readme = "README.md"
keywords = ["raft", "kraft", "consensus", "distributed", "failover"]
categories = ["algorithms", "data-structures", "concurrency"]

[lib]
name = "failover_cluster_raft"
path = "src/lib.rs"

[features]
default = []

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
