[package]
name = "xraft-core"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
bytes = { workspace = true }
tracing = "0.1"
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
prost = { workspace = true }