[package]
name = "xraft-server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "xraft_server"
path = "src/lib.rs"

[[bin]]
name = "xraft-server"
path = "src/main.rs"

[dependencies]
xraft-core = { path = "../xraft-core" }
xraft-storage = { path = "../xraft-storage" }
xraft-transport = { path = "../xraft-transport" }
xraft-client = { path = "../xraft-client" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
prometheus-client = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
