[package]
name = "xraft-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
xraft-core = { path = "../xraft-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
