[package]
name = "xraft-storage"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
bincode.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
