[package]
name = "xraft-test"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
xraft-core = { path = "../xraft-core" }
xraft-storage = { path = "../xraft-storage" }
xraft-server = { path = "../xraft-server" }
xraft-transport = { path = "../xraft-transport" }
xraft-client = { path = "../xraft-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
tempfile = "3"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
# Stage 8.2 chaos / stress tests use `futures::executor::block_on`
# inside `panic!` diagnostic formatters where an `async` snapshot
# helper must be invoked from a non-async context. This is the
# minimum-footprint dependency for that single use; pulled into
# dev-dependencies only.
futures = "0.3"